# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api/v1
 definitions:
-  github_com_fntsky_ddl_guard_internal_base_handler.resp:
+  handler.resp:
     properties:
       code:
         type: integer
@@ -8,7 +8,7 @@ definitions:
       message:
         type: string
     type: object
-  github_com_fntsky_ddl_guard_internal_schema.CreateDraftInput:
+  schema.CreateDraftInput:
     properties:
       deadline:
         example: "2026-03-24T14:30:00+08:00"
@@ -24,20 +24,19 @@ definitions:
         example: test ddl
         type: string
     type: object
-  github_com_fntsky_ddl_guard_internal_schema.CreateDraftReq:
+  schema.CreateDraftReq:
     properties:
       data_type:
         default: default
         example: default
         type: string
       draft:
-        $ref: '#/definitions/github_com_fntsky_ddl_guard_internal_schema.CreateDraftInput'
-      raw:
-        items:
-          type: integer
-        type: array
+        $ref: '#/definitions/schema.CreateDraftInput'
+      raw_base64:
+        example: iVBORw0KGgoAAAANSUhEUgAA...
+        type: string
     type: object
-  github_com_fntsky_ddl_guard_internal_schema.CreateDraftResp:
+  schema.CreateDraftResp:
     properties:
       deadline:
         example: "2026-03-24T14:30:00+08:00"
@@ -56,7 +55,7 @@ definitions:
         example: 7a178766-4b8e-4e99-ab4c-843f7dbd95fd
         type: string
     type: object
-  github_com_fntsky_ddl_guard_internal_schema.UpdateDraftStatusReq:
+  schema.UpdateDraftStatusReq:
     properties:
       status:
         example: active
@@ -64,7 +63,7 @@ definitions:
     required:
     - status
     type: object
-  github_com_fntsky_ddl_guard_internal_schema.UpdateDraftStatusResp:
+  schema.UpdateDraftStatusResp:
     properties:
       status:
         example: 1
@@ -91,7 +90,7 @@ paths:
         name: req
         required: true
         schema:
-          $ref: '#/definitions/github_com_fntsky_ddl_guard_internal_schema.CreateDraftReq'
+          $ref: '#/definitions/schema.CreateDraftReq'
       produces:
       - application/json
       responses:
@@ -99,10 +98,10 @@ paths:
           description: success
           schema:
             allOf:
-            - $ref: '#/definitions/github_com_fntsky_ddl_guard_internal_base_handler.resp'
+            - $ref: '#/definitions/handler.resp'
             - properties:
                 data:
-                  $ref: '#/definitions/github_com_fntsky_ddl_guard_internal_schema.CreateDraftResp'
+                  $ref: '#/definitions/schema.CreateDraftResp'
               type: object
       summary: 创建DDL草稿
       tags:
@@ -123,7 +122,7 @@ paths:
         name: req
         required: true
         schema:
-          $ref: '#/definitions/github_com_fntsky_ddl_guard_internal_schema.UpdateDraftStatusReq'
+          $ref: '#/definitions/schema.UpdateDraftStatusReq'
       produces:
       - application/json
       responses:
@@ -131,10 +130,10 @@ paths:
           description: success
           schema:
             allOf:
-            - $ref: '#/definitions/github_com_fntsky_ddl_guard_internal_base_handler.resp'
+            - $ref: '#/definitions/handler.resp'
             - properties:
                 data:
-                  $ref: '#/definitions/github_com_fntsky_ddl_guard_internal_schema.UpdateDraftStatusResp'
+                  $ref: '#/definitions/schema.UpdateDraftStatusResp'
               type: object
       summary: 同意DDL草稿
       tags:
